[package]
name = "darkpool-indexer-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# === Renegade === #
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git" }
renegade-darkpool-types = { package = "darkpool-types", git = "https://github.com/renegade-fi/renegade.git", features = ["proof-system-types"] }
renegade-circuit-types = { package = "circuit-types", git = "https://github.com/renegade-fi/renegade.git" }
renegade-types-account = { package = "types-account", git = "https://github.com/renegade-fi/renegade.git" }
renegade-external-api = { package = "external-api", git = "https://github.com/renegade-fi/renegade.git" }

# === Blockchain === #
alloy-primitives = { workspace = true }
renegade-solidity-abi = { workspace = true, default-features = true }

# === Misc === #
serde = "1.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }