[package]
name = "prover-service-api"
version = "0.1.0"
edition = "2024"

[dependencies]

# === Renegade Dependencies === #
renegade-circuits-core = { package = "circuits-core", git = "https://github.com/renegade-fi/renegade.git", branch = "joey/relayer-v2" }
renegade-circuit-types = { package = "circuit-types", git = "https://github.com/renegade-fi/renegade.git", branch = "joey/relayer-v2" }

# === Misc Dependencies === #
serde = { version = "1", features = ["derive"] }
