[package]
name = "prover-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# === HTTP Server + Runtime === #
http = "0.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

# === Renegade Dependencies === #
renegade-circuits = { workspace = true }
renegade-circuit-types = { workspace = true }
renegade-util = { workspace = true, features = ["telemetry"] }

# === Misc Dependencies === #
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
