[package]
name = "prover-service"
version = "0.1.0"
edition = "2024"

[features]
log-invalid-bundles = ["dep:mpc-plonk"]

[dependencies]
# === HTTP Server + Runtime === #
http = "0.2"
http-auth-basic = "0.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

# === Renegade Dependencies === #
renegade-circuit-types = { workspace = true }
renegade-circuits-core = { workspace = true }
renegade-util = { workspace = true, features = ["telemetry"] }
prover-service-api = { path = "../api" }
mpc-plonk = { git = "https://github.com/renegade-fi/mpc-jellyfish.git", optional = true }

# === Misc Dependencies === #
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opentelemetry = "0.21"
opentelemetry-http = "0.10"
tracing-opentelemetry = "0.22"
